It finally works, thank mongod

--- a/src/app/movies/movie-list/movie-list.component.html
+++ b/src/app/movies/movie-list/movie-list.component.html
@@ -5,7 +5,7 @@
       <li class="list-group-item"
           *ngFor="let movie of movies"
           >
-        {{movie}}
+        {{movie.title}}
       </li>
     </ul>
     <button class="btn btn-warning" (click)="createNewMovie()">New</button>
